--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0px;
     line-height: 1.5;
-    background-color: lavender;
+    background-color: rgb(232,234,237);
 }
 
 main {
